force-app/main/default/objects/TwilioSF__LogEvent__e/TwilioSF__LogEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event to capture Logs</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>