force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__ClassName__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ClassName__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>