force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__JSON__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>