force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__Level__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Level__c</fullName>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>