force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>