force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__ObjectIDs__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ObjectIDs__c</fullName>
    <label>Object IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>