force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>