force-app/main/default/objects/TwilioSF__LogEvent__e/fields/TwilioSF__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>